# DocuNexus1

client/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json
client/src/: App.tsx
client/src/Pages/: Dashboard.tsx  Home.tsx  Layout.tsx  SignIn.tsx  SignUp.tsx  document-viewer.tsx  document.tsx  index.tsx  query-interface.tsx  (+3 more)
server/: .gitignore  README.md  main.py  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 2d5b01963d5b_desing_schema_models_for_document.py  3f1e66a1380b_added_queryresponse_model_and_related_.py  5068cbb57fbf_changed_password_length.py  d0d30e33ae4b_included_insights_fields_and_updated_.py
server/app/: celery_app.py  config.py  database.py  main.py  redis_client.py
server/app/api/: dependencies.py
server/app/api/v1/: auth.py  document.py  query.py
server/app/core/: config.py  database.py  dependencies.py  exceptions.py  redis_client.py  security.py
server/app/middleware/: auth.py  auth_middleware.py  exception_handler_middleware.py
server/app/models/: __init__.py  document.py  query.py  user.py
server/app/repositories/: document_repository.py  query_repository.py  user_repository.py
server/app/schemas/: auth.py  document.py  insights.py  query.py  user.py
server/app/services/: auth.py  auth_service.py  cloudinary_service.py  document_processor.py  document_service.py  gemini_service.py  pinecone_service.py  query_service.py  rag_agent_service.py  security_service.py  unstructured_service.py  user.py
server/app/tasks/: document_tasks.py
server/app/utils/: prompts.py
(+20 files in other folders)
