[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.118.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "python-jose[cryptography]>=3.5.0",
    "redis[hiredis]>=6.4.0",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.37.0",
]
